# repomap

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml  repomap_ai.py  repomap_check.py  repomap_core.py  repomap_lsp.py  repomap_parser.py  repomap_ranking.py  repomap_resolver.py  repomap_support.py  repomap_toolkit.py  repomap_topic.py
.github/workflows/: build-binaries.yml  ci.yml
docs/: BOUNDARIES.md  acceptance-checklist.md  for-ai-smoke-check.md  implementation-plan.md
docs/deliverables/: delivery-report-2026-04-06.md  delivery-report-2026-04-26.md
mcp/: MAINTENANCE.md  package.json  tsconfig.json
mcp/repomap-bin/: index.js  package.json  run.js
mcp/src/: index.ts  release.test.ts  repomap.ts  tools.ts
npm/wrapper/: package.json  repomap.js
repomap/: __init__.py  ai.py  check.py  core.py  parser.py  ranking.py  resolver.py  toolkit.py  topic.py
repomap/cli/: __main__.py  cli.py
repomap_cli/: __main__.py  cli.py
skills/repomap/: SKILL.md
skills/repomap/references/: authoring-checklist.md  command-map.md  prompt-examples.md
skills/repomap/scripts/: validate-skill.sh
src/: __init__.py  ai.py  callgraph.py  check.py  co_change.py  consumers.py  core.py  formatters.py  git_backend.py  gitignore.py  hints.py  lsp.py  parser.py  queries.py  ranking.py  resolver.py  route_extractor.py  search.py  secrets.py  state_map.py  toolkit.py  topic.py  type_inference.py
src/cli/: __main__.py  cli.py  handlers.py
src/cli/commands/: affected.py  build.py  cache.py  doctor.py  fix.py  impact.py  overview.py  (+4 more)
src/reports/: __init__.py  affected.py  call_chain.py  file_detail.py  impact.py  overview.py  query.py  routes.py  verify.py
tests/: __init__.py  test_callgraph.py  test_formatters.py  test_git_backend.py  test_gitignore.py  test_hints.py  test_issue_108_109.py  test_issue_123.py  test_issue_129.py  test_issue_143.py  test_issue_170.py  test_issue_175.py  test_issue_176.py  test_issue_177.py  test_issue_178.py  test_issue_179.py  test_issue_180.py  test_issue_181.py  test_issue_182.py  test_issue_183.py  test_issue_36.py  test_issue_36_p2.py  test_issue_39.py  test_issue_40.py  test_issue_41.py  test_issue_50_impact_verify.py  test_issue_56_cli.py  test_issue_56_core.py  test_issue_56_lsp.py  test_issue_56_robust.py  test_issue_58_cache.py  test_issue_59_lsp.py  test_issue_60_json.py  test_issue_63_integration.py  test_issue_63_more_integration.py  test_p0_fixes.py  test_p1_fixes.py  test_p1_fixes_issue70.py  test_repomap_binary_e2e.py  test_repomap_cli.py  (+8 more)
