[project]
name = "repomap-cli"
version = "1.0.0"
description = "Standalone RepoMap CLI with tree-sitter AST parsing"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-json>=0.23.0",
]

[project.optional-dependencies]
all = [
    "tree-sitter-yaml>=0.7.0",
    "tree-sitter-markdown>=0.3.0",
    "tree-sitter-embedded-template>=0.23.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=0.4.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
repomap = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
