[project]
name = "repomap-cli"
version = "2.5.0"
description = "Standalone RepoMap CLI with tree-sitter AST parsing"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-json>=0.23.0",
    "pathspec[re2]>=0.12.0",
]

[project.optional-dependencies]
all = [
    "tree-sitter-yaml>=0.7.0",
    "tree-sitter-markdown>=0.3.0",
    "tree-sitter-embedded-template>=0.23.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=0.4.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "orjson>=3.9.0",
    "pygit2>=1.14.0",
    "rank-bm25>=0.2.2",
]
build = [
    "pyinstaller>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pyright>=1.1.400",
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
repomap = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
# `l` is used as a loop variable in list comprehensions for line parsing
# (e.g. `[l for l in lines if l]`). This is a well-established pattern.
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# F841: query_lower is intentionally set for potential future use in search
"src/search.py" = ["F841"]
